# agent_bus

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION_PLAN.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  Dockerfile  Dockerfile.old  Dockerfile.optimized  FINAL_REPORT.md  KAN36_COMPLETE.md  KAN59_COMPLETE.md  PLAN.md  PROGRESS.md  README.md  TODO.md  TODO_JIRA.md  agent.md  check_kan36.py  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: BRANCH_PROTECTION.md
config/: platform_modules.json  skill_allowlist.example.yaml
docs/: API_DOCUMENT_PROCESSING.md  ARCHITECTURE.md  COMPLETION_REPORT.md  DOCKER.md  EXTERNALIZATION.md  GPU_WORKERS.md  KAN40_IMPLEMENTATION_GUIDE.md  MEMORY_STORE.md  OBSERVABILITY.md  PDF_EXPORT.md  RELEASE.md  SECRETS.md  SKILLS_INSTALL.md  SKILLS_SYSTEM.md  SKILL_ALLOWLIST.md  UIUX_PLAN.md  USER_GUIDE.md
k8s/: README.md
scripts/: create_kan35_subtasks.py  create_kan36_subtasks.py  docker-build-cached.sh  init_db.sql  jira_seed_execution_ready.py  jira_sync_todo.py  memory_smoke.sh  phase4_smoke.sh  query_kan36.py  release.sh  render_mermaid.py  render_pdfs.sh  seed_templates.py  start-live.sh  transition_kan_task.py  update_jira_status.py
skills/: skills.json
src/: cli.py  cli_jobs.py  cli_memory.py  config.py  exceptions.py  main.py
tests/: __init__.py  manual_test_embedding_generator.py  test_agent_skill_permissions.py  test_allowlist_config_loader.py  test_api_document_processing.py  test_api_skills.py  test_architect_agent.py  test_artifact_store.py  test_chroma_store.py  test_chromadb_store.py  test_circuit_breaker.py  test_cli.py  test_developer_agent.py  test_di_container.py  test_e2e_workflow.py  test_embedding_generator.py  test_error_handling.py  (+22 more)
(+211 files in other folders)
